Corrections ; bootstrap et contrast

--- a/style.css
+++ b/style.css
@@ -778,7 +778,9 @@ h4 {
 .tc-white {
     color: #FFFFFF!important;
 }
-
+.tc-black{
+    color: black !important;
+}
 .btn-atomic-tangerine {
     background: #F3976C;
     color: black !important;
